# Proposal

./: .env.example  .env.exemple  .gitignore  ARCHITECTURE_PROPOSAL.txt  Makefile  README.md  alembic.ini  docker-compose.yml  manage.py  requirements.txt
Planning/: ArchitectureProjectsTasks.txt  STAGE ONE (DATASET ANALYSIS)  STAGE ONE (DATASET ANALYSIS).txt  Tasks.txt  planing.txt  task.md
backend/: Dockerfile  requirements.txt
data-json/: extensions.json
docs/: DNS_Dataset.txt  dns_dataset_strategy.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.js
nginx/: nginx.conf
planning/: STAGE ONE (DATASET ANALYSIS)
scripts/: cleanup_host_datasets_new.py  dataset_format_cleanup.py  dataset_path.py  dataset_processing.py  json_data.py  read_format.py  smoke-test.sh
shared/python/: pyproject.toml
shared/python/cybersec_platform/: __init__.py
shared/python/cybersec_platform/contracts/: __init__.py  api.py
shared/python/cybersec_platform/db/: __init__.py  models.py  session.py
shared/python/cybersec_platform/ml/: auto_training.py  features.py  inference.py  nn_models.py  normalization.py  parser.py  training.py
shared/python/cybersec_platform/observability/: __init__.py  log_contracts.py  logging.py
shared/python/cybersec_platform/storage/: artifacts.py
shared/python/cybersec_platform/tasks/: celery_app.py
shared/python/cybersec_platform_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+141 files in other folders)
