[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybersec-platform-shared"
version = "0.1.0"
description = "Shared contracts and ML logic for behaviour-driven data exfiltration detection platform."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "email-validator>=2.1,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "psycopg[binary]>=3.1,<4.0",
  "alembic>=1.13,<2.0",
  "celery>=5.4,<6.0",
  "redis>=5.0,<6.0",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
parser = [
  "pandas>=2.2,<3.0",
  "openpyxl>=3.1,<4.0",
  "pyarrow>=16.1,<18.0",
  "dpkt>=1.9,<2.0",
]
inference = [
  "joblib>=1.4,<2.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.2,<3.0",
  "scikit-learn>=1.5,<2.0",
  "torch>=2.3,<3.0",
  "xgboost>=2.1,<3.0",
]
training = [
  "joblib>=1.4,<2.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.2,<3.0",
  "scikit-learn>=1.5,<2.0",
  "shap>=0.46,<1.0",
  "torch>=2.3,<3.0",
  "xgboost>=2.1,<3.0",
]

[tool.setuptools.packages.find]
where = ["."]
